--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jason's Personal Page</title>
+    <title>Jason's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
 <body>
-    <h1>This is my personal page</h1>
+    <div class="fixed_nav">
+        <div class="wrapper">
+            <header>
+                <h1 id=name>Jason Flick</h1>
+            </header>
+            <nav>
+                <ul>
+                    <li><a class="active" href="#">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+
+    <section>
+        <h1 id="sub_header">About Me</h1>
+        <img id="picture" src="https://pbs.twimg.com/media/BsgYfMQCQAAWVKH.jpg" alt="Bill Murray">
+        <article>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus iure, reiciendis illo maiores cum in? Aliquid fugiat eligendi at officia, quam enim nesciunt voluptate, nulla dolorem pariatur distinctio inventore maiores id ducimus consequuntur. Sapiente dolor excepturi, error repudiandae et expedita cupiditate odit ipsam officiis tenetur eveniet quo corporis quis praesentium aut pariatur, voluptate suscipit necessitatibus consectetur possimus alias voluptatibus. Quisquam numquam quo nulla, porro impedit placeat quos alias, tenetur veritatis ad esse perspiciatis in nesciunt voluptatum error deserunt itaque asperiores! Temporibus ea similique adipisci, corrupti neque deserunt omnis alias unde. Maiores vero ipsa omnis non temporibus fuga dolore, cum quos!
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate recusandae explicabo inventore assumenda excepturi iure. Ad harum pariatur minima non perferendis quisquam reiciendis, hic ut laboriosam, unde aliquid suscipit nesciunt.
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat ratione itaque excepturi magnam vel dolorum iusto repudiandae reprehenderit minima nostrum ut, cumque eos aliquam non quaerat unde nesciunt, adipisci doloribus.
+            </p>
+        </article>
+    </section>
+
+    <footer>
+        <p id="copyright">Copyright &#169</p>
+    </footer>
+
 </body>
+
 </html>
