Changed column width from sm to xs.

--- a/contact.html
+++ b/contact.html
@@ -31,17 +31,17 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-xs-12">
                 <div class="thumbnail">
                     <div class="page-header">
                         <h1>Contact</h1>
                     </div>
 
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label for="form_name">Name</label>
-                                <input id="form_name" type="name" name="name" class="form-control" placeholder="John Smith">
+                                <input id="form_name" type="name" name="name" class="form-control" placeholder="John xsith">
                             </div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                     <br>
                     
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-xs-12">
                             <div class="form-group">
                                 <label for="form_email">Email</label>
                                 <input id="form_email" type="email" name="email" class="form-control" placeholder="example@gmail.com">
@@ -60,13 +60,13 @@
                     <br>
 
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-xs-12">
                                 <div class="form-group">
                                     <label for="form_message">Message</label>
                                     <textarea id="form_message" name="message" class="form-control" placeholder="" rows="4"></textarea>
                                 </div>
                         </div>
-                        <div class="col-sm-12">
+                        <div class="col-xs-12">
                             <input type="submit" class="btn-send">
                         </div>
                     </div>
