--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-xs-12">
                 <div class="thumbnail">
                     <div class="page-header">
                         <h1>About Me</h1>
                     </div>
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-xs-12">
                                 <div class="float-left">
                                 <img src="https://pbs.twimg.com/media/BsgYfMQCQAAWVKH.jpg" id="picture" alt="Bill Murray">
                                 </div>
