--- a/portfolio.html
+++ b/portfolio.html
@@ -31,13 +31,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-xs-12">
                 <div class="thumbnail">
                     <div class="page-header">
                         <h1>Portfolio</h1>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-xs-4">
                             <a href="#" class="thumbnail thumbnail-picture">
                                 <img src=assets/imgs/hangman.PNG alt="Hangman">
                             <div class="row">
@@ -47,7 +47,7 @@
                             </div>
                             </a>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-4">
                             <a href="#" class="thumbnail thumbnail-picture">
                                 <img src=assets/imgs/rpg_game.jpg alt="RPG Game">
                             <div class="row">
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-xs-4">
                             <a href="#" class="thumbnail thumbnail-picture">
                                 <img src=assets/imgs/trivia_game.jpg alt="Trivia Game">
                             <div class="row">
@@ -69,7 +69,7 @@
                             </div>
                             </a>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-xs-4">
                             <a href="#" class="thumbnail thumbnail-picture">
                                 <img src=assets/imgs/rutgers_info_widget.jpg alt="Rutgers Info Widget">
                             <div class="row">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-xs-4">
                             <a href="#" class="thumbnail thumbnail-picture">
                                 <img src=assets/imgs/rock_paper_scissors.jpg alt="Rock Paper Scissors">
                             <div class="row">
