Added TriviaGame to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-lg-4">
-                            <a href="#" class="thumbnail thumbnail-picture">
+                            <a href="https://jflick00.github.io/TriviaGame/" class="thumbnail thumbnail-picture">
                                 <img src=assets/imgs/trivia_game.jpg alt="Trivia Game">
                             <div class="row">
                                 <div class="caption caption-picture">
