Added QC-Pros to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-    
     <nav class="navbar navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -28,7 +27,7 @@
             </ul>
         </div>
     </nav>
-
+       
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-lg-12">
@@ -70,11 +69,11 @@
                             </a>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-lg-4">
-                            <a href="#" class="thumbnail thumbnail-picture">
-                                <img src=assets/imgs/rutgers_info_widget.jpg alt="Rutgers Info Widget">
+                            <a href="https://jflick00.github.io/QC-Pros/" class="thumbnail thumbnail-picture">
+                                <img src=assets/imgs/rutgers_info_widget.jpg alt="QC Pros">
                             <div class="row">
                                 <div class="caption caption-picture">
-                                    <h3>Rutgers Info Widget</h3>
+                                    <h3>QC Pros</h3>
                                 </div>
                             </div>
                             </a>
