Added Train Time to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,11 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-lg-4">
-                            <a href="#" class="thumbnail thumbnail-picture">
-                                <img src=assets/imgs/rock_paper_scissors.jpg alt="Rock Paper Scissors">
+                            <a href="https://jflick00.github.io/TrainTime/" class="thumbnail thumbnail-picture">
+                                <img src=assets/imgs/rock_paper_scissors.jpg alt="Train Time">
                             <div class="row">
                                 <div class="caption caption-picture">
-                                    <h3>Rock Paper Scissors</h3>
+                                    <h3>Train Time</h3>
                                 </div>
                             </div>
                             </a>
