Added liri-node-app to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,11 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-lg-4">
-                            <a href="#" class="thumbnail thumbnail-picture">
-                                <img src=assets/imgs/hangman.PNG alt="Hangman">
+                            <a href="https://github.com/jflick00/liri-node-app" class="thumbnail thumbnail-picture">
+                                <img src=assets/imgs/hangman.PNG alt="Liri-Node-App">
                             <div class="row">
                                 <div class="caption caption-picture">
-                                    <h3>Hangman</h3>
+                                    <h3>Liri-Node-App</h3>
                                 </div>
                             </div>
                             </a>
