Added Bamazon to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -107,6 +107,16 @@
                     </a>
                 </div>
             </div>
+            <div class="col-12 col-lg-4">
+                <div class="card cardImg">
+                    <a href="https://github.com/jflick00/bamazon">
+                        <img class="card-img-top" src=assets/imgs/hangman.PNG alt="Bamazon">
+                        <div class="card-body">
+                            <h3>Bamazon</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
 
     </div>
