Added 'Friend Finder' to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
             <div class="col-12 col-lg-4">
                 <div class="card cardImg">
                     <a href="https://github.com/jflick00/bamazon">
-                        <img class="card-img-top" src=assets/imgs/hangman.PNG alt="Bamazon">
+                        <img class="card-img-top" src=assets/imgs/trivia_game.jpg alt="Bamazon">
                         <div class="card-body">
                             <h3>Bamazon</h3>
                         </div>
@@ -119,6 +119,19 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <div class="card cardImg">
+                    <a href="https://github.com/jflick00/FriendFinder">
+                        <img class="card-img-top" src=assets/imgs/trivia_game.jpg alt="Friend Finder">
+                        <div class="card-body">
+                            <h3>Friend Finder</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            
+        </div>
     </div>
     
     <footer class="footer">Copyright &copy</footer>
