Added Eat-da-Burger to portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,16 @@
                     </a>
                 </div>
             </div>
-            
+            <div class="col-12 col-lg-4">
+                <div class="card cardImg">
+                    <a href="https://github.com/jflick00/burger">
+                        <img class="card-img-top" src=assets/imgs/trivia_game.jpg alt="Eat-da-Burger">
+                        <div class="card-body">
+                            <h3>Eat-da-Burger</h3>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     
