--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
           <!-- Social Buttons -->
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#" title="GitHub">
+              <a href="https://github.com/jflick00" title="GitHub">
                 <i class="fa fa-github"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" title="LinkedIn">
+              <a href="https://www.linkedin.com/in/jason-flick-ab95a0156/" title="LinkedIn">
                 <i class="fa fa-linkedin"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" title="Stack Overflow">
+              <a href="https://stackoverflow.com/users/9448717/jason-flick" title="Stack Overflow">
                 <i class="fa fa-stack-overflow"></i>
               </a>
             </li>
@@ -265,17 +265,17 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/jflick00">
                 <i class="fa fa-github"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/jason-flick-ab95a0156/">
                 <i class="fa fa-linkedin"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://stackoverflow.com/users/9448717/jason-flick">
                 <i class="fa fa-stack-overflow"></i>
               </a>
             </li>
