Removed Eat-da-burger project for now. Update later.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <h4>Friend Finder</h4>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <!-- <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" href="https://github.com/jflick00/burger">
             <div class="portfolio-hover">
             </div>
@@ -180,7 +180,7 @@
           <div class="portfolio-caption">
             <h4>Eat-da-Burger</h4>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" href="https://jflick00.github.io/unit-4-game/">
             <div class="portfolio-hover">
